objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs.</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
        <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</description>
        <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</inlineHelpText>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Contact__c</fullName>
        <label>Touchpoint Status (Contact)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Date__c</fullName>
        <label>Touchpoint Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Lead__c</fullName>
        <label>Touchpoint Status (Lead)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Status_Opportunity__c</fullName>
        <label>Touchpoint Status (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>